--- a/style.css
+++ b/style.css
@@ -1,15 +1,24 @@
+body {
+	display: flex;
+	background-color: black;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	align-items: center;
+}
+
 canvas {
 	border: 1px solid white;
 }
 
 h1 {
-	margin: 10px 0;
+	margin: 20px 0;
+	color: white;
 }
 
 .instructions {
 	margin: 10px 0;
 	padding: 20px;
-	background-color: lightgray;
+	background-color: grey;
 	width: max-content;
 	border-radius: 10px;
 }
@@ -30,21 +39,39 @@ main {
 
 main .next_puzzle {
 	margin: 10px 0;
-	padding: 20px;
 	background-color: black;
-	width: max-content;
 	border-radius: 10px;
-	display: flex;
-	flex-direction: column;
 }
 
 main .next_puzzle p {
+	padding: 10px;
 	margin: 0;
 	color: grey;
 	font-style: italic;
 }
-main .next_puzzle canvas {
+main .next_puzzle {
 	width: 100px;
 	margin: 5px 0;
 	border: 0;
+}
+
+#next-puzzle {
+	margin-left: 25px;
+	width: 100px;
+	border: 0;
+}
+
+.info {
+	margin-left: 10px;
+}
+
+.score {
+	color: white;
+	padding: 10px;
+	background-color: grey;
+	border-radius: 10px;
+}
+
+.score p {
+	margin: 0;
 }
